syntax = "proto3";
package meconod;

option go_package = "github.com/jaksonkallio/mecono/meconod/protos";

// A transmission of a Mecono network message.
message TransmitRequest {
	// Base64 string of the message bytedata.
	string message = 1;
}

// The response to a transmission of a Mecono network message.
message TransmitResponse {
	bool ok = 1;
}

message NeighborHealthCheckRequest {}

message NeighborHealthCheckResponse {
	string status = 1;
}

service MeconodService {
	rpc Transmit(TransmitRequest) returns (TransmitResponse);
	rpc NeighborHealthCheck(NeighborHealthCheckRequest) returns (NeighborHealthCheckResponse);
}